# Lattice

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  build.rs
docs/adr/: 0001-vllm-integration-architecture.md
docs/agents/: domain.md  triage-labels.md
docs/benchmark/: run_kcmm_benches.md  run_kcmm_integeration_bench.md
docs/cr/: kcmm-basic-review.md  kcmm-benchmark-anomaly-fixes.md  kcmm-phase-bc-review.md  kcmm-phase-e-batch-eviction-issue.md  kcmm-phase1-review.md  kcmm-swap-policy-review.md  unit-test-audit.md
docs/dev/: enhance-runtime-fragmentation-test.md  fix-superblock-free-list.md  kcmm-baremetal-plan.md  kcmm-cross-process-memory-management.md  kcmm-eviction-latency-wsl2-vs-baremetal.md  kcmm-ffi-roadmap.md  kcmm-measurement-methodology-fix.md  kcmm-memcpy-batching-plan.md  kcmm-memory-model-and-vllm-code-map.md  kcmm-mmap-prefault-analysis.md  kcmm-pressure-test-analysis.md  kcmm-pressure-tiering-test.md  kcmm-swap-policy-impl.md  kcmm-vllm-cu118-env.md  kcmm-week13-fixes.md  paged-kv-refactor-step3.md  refactor-cudavmm-single-owner.md  runtime-fragmentation-tracker.md  step-3-refactor-cudavmm-single-owner.md  step1-bpf-tracing-implementation.md  (+6 more)
examples/: bench_loaders.rs  bench_throughput.rs  check_logits.rs  client.rs  kcmm_c_integration.c
include/: kcmm.h
scripts/: __init__.py  bench_vllm.py  bench_vllm_comprehensive.py  benchmark.sh  load_and_exit.sh  run_bench.sh  run_kcmm_benches.sh  run_kcmm_integration_bench.sh  setup_cloudlab.sh  step1_test_baremetal.sh  step1_test_wsl2.sh  step3_test_baremetal.sh  step3_test_wsl2.sh  trace_all.bt  trace_cuda_memcpy.bt  trace_nvme.bt  trace_page_cache.bt  trace_tcp.bt  trace_vfs.bt  ufs_metrics.py
src/: config.rs  lib.rs  main.rs
tests/: bench_utils.rs  kcmm_bench_alloc.rs  kcmm_bench_engine_integration.rs  kcmm_bench_memory_pressure.rs  kcmm_bench_tiering.rs  kcmm_correctness.rs  step3_benchmarks.rs
(+192 files in other folders)
