[package]
name = "baseline-llm-os"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytemuck = "1.16"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
cudarc = { version = "0.11", features = ["std", "cuda-12020", "cublas", "driver", "runtime", "f16"] }
half = { version = "2.4", features = ["bytemuck"] }
parking_lot = "0.12"
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "baseline-server"
path = "src/main.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[profile.release]
debug = true
lto = "thin"
codegen-units = 1
