[package]
name = "baseline-llm-os"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
libc = "0.2"
bytemuck = "1.16"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
cudarc = { version = "0.11", features = ["std", "cuda-12020", "cublas", "driver", "f16", "nvrtc"] }
half = { version = "2.4", features = ["bytemuck"] }
memmap2 = "0.9"
parking_lot = "0.12"
rand = "0.8"
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
gds = []

[[bin]]
name = "baseline-server"
path = "src/main.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "bench_loaders"
path = "examples/bench_loaders.rs"

[[example]]
name = "bench_throughput"
path = "examples/bench_throughput.rs"

[[example]]
name = "check_logits"
path = "examples/check_logits.rs"

[profile.release]
debug = true
lto = "thin"
codegen-units = 1
